--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 ** DIGEST-MD5 is disabled by default, pending a rewrite for the new API.
 
+** Server mode in the command line tool does not work currently.
+It is unclear if this feature was ever that useful.  If there are no
+objections, it will be removed completely in future versions.
+
 * Version 0.2.2 (released 2004-11-29)
 
 ** Update of gnulib files.
