--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 0.2.3 (unreleased)
 
+** PLAIN client no longer perform NFKC on strings.
+This aligns with draft-ietf-sasl-plain-05.
+
 ** If Libidn is not installed on the system, a stripped down version is used.
 If you for some reason wish to use the included copy, instead of the
 system libidn, use --with-included-libidn.  The system libidn should
