--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -986,6 +986,8 @@ void client_authenticate (Gsasl * ctx, Gsasl_session * session)
     @{
       printf ("Input base64 encoded data from server:\n");
       fgets (buf, sizeof (buf) - 1, stdin);
+      if (buf[strlen (buf) - 1] == '\n')
+	buf[strlen (buf) - 1] = '\0';
 
       rc = gsasl_step64 (session, buf, &p);
 
