--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,487 @@
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* lib/ChangeLog: Generated.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gsasl.texi: Link to autobuild.josefsson.org.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* doc/texinfo.css: Update.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* lib/gltests/Makefile.am: Quick fix to make it build.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* lib/gltests/Makefile.am: Quick fix to make it build.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, lib/NEWS: Version 1.0.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk: Upload to ftp.gnu.org.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac, lib/NEWS, lib/configure.ac, lib/src/gsasl.h: 
+	Bump version to 1.0.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* gtk-doc.make: Update with stable upstream.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* tests/suggest.c: Make it work with --disable-obsolete.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* lib/NEWS: Add.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Fix.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* gl/version-etc.c, gl/version-etc.h, src/gsasl.c: Use
+	emit_bug_reporting_address from gnulib.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.c: Emit bug report address more.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.c: Fix priority setting.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* Makefile.am, README, README-alpha, cfg.mk, configure.ac,
+	doc/Makefile.am, doc/cyclo/Makefile.am, doc/doxygen/gdoc2doxygen,
+	doc/print-errors.c, lib/Makefile.am, lib/NEWS, lib/README,
+	lib/README-alpha, lib/THANKS, lib/anonymous/Makefile.am,
+	lib/anonymous/anonymous.h, lib/anonymous/client.c,
+	lib/anonymous/mechinfo.c, lib/anonymous/server.c,
+	lib/cram-md5/Makefile.am, lib/cram-md5/challenge.c,
+	lib/cram-md5/challenge.h, lib/cram-md5/client.c,
+	lib/cram-md5/cram-md5.h, lib/cram-md5/digest.c,
+	lib/cram-md5/digest.h, lib/cram-md5/mechinfo.c,
+	lib/cram-md5/server.c, lib/digest-md5/Makefile.am,
+	lib/digest-md5/README, lib/digest-md5/client.c,
+	lib/digest-md5/digest-md5.h, lib/digest-md5/digesthmac.c,
+	lib/digest-md5/digesthmac.h, lib/digest-md5/free.c,
+	lib/digest-md5/free.h, lib/digest-md5/getsubopt.c,
+	lib/digest-md5/mechinfo.c, lib/digest-md5/nonascii.c,
+	lib/digest-md5/nonascii.h, lib/digest-md5/parser.c,
+	lib/digest-md5/parser.h, lib/digest-md5/printer.c,
+	lib/digest-md5/printer.h, lib/digest-md5/server.c,
+	lib/digest-md5/session.c, lib/digest-md5/session.h,
+	lib/digest-md5/test-parser.c, lib/digest-md5/tokens.h,
+	lib/digest-md5/validate.c, lib/digest-md5/validate.h,
+	lib/external/Makefile.am, lib/external/client.c,
+	lib/external/external.h, lib/external/mechinfo.c,
+	lib/external/server.c, lib/gssapi/Makefile.am, lib/gssapi/client.c,
+	lib/gssapi/mechinfo.c, lib/gssapi/server.c, lib/gssapi/x-gssapi.h,
+	lib/libgsasl.pc.in, lib/login/Makefile.am, lib/login/client.c,
+	lib/login/login.h, lib/login/mechinfo.c, lib/login/server.c,
+	lib/m4/output-def.m4, lib/m4/update-header-version.m4,
+	lib/ntlm/Makefile.am, lib/ntlm/mechinfo.c, lib/ntlm/ntlm.c,
+	lib/ntlm/x-ntlm.h, lib/plain/Makefile.am, lib/plain/client.c,
+	lib/plain/mechinfo.c, lib/plain/plain.h, lib/plain/server.c,
+	lib/securid/Makefile.am, lib/securid/client.c,
+	lib/securid/mechinfo.c, lib/securid/securid.h,
+	lib/securid/server.c, lib/src/Makefile.am, lib/src/base64.c,
+	lib/src/callback.c, lib/src/crypto.c, lib/src/done.c,
+	lib/src/error.c, lib/src/free.c, lib/src/gsasl-compat.h,
+	lib/src/gsasl-mech.h, lib/src/gsasl.h, lib/src/init.c,
+	lib/src/internal.h, lib/src/listmech.c, lib/src/md5pwd.c,
+	lib/src/mechname.c, lib/src/obsolete.c, lib/src/property.c,
+	lib/src/register.c, lib/src/saslprep.c, lib/src/suggest.c,
+	lib/src/supportp.c, lib/src/version.c, lib/src/xcode.c,
+	lib/src/xfinish.c, lib/src/xstart.c, lib/src/xstep.c,
+	lib/tests/Makefile.am, lib/tests/test-error.c, m4/valgrind.m4,
+	po/POTFILES.in, src/Makefile.am, src/callbacks.c, src/callbacks.h,
+	src/gsasl.ggo, src/imap.c, src/imap.h, src/internal.h, src/smtp.c,
+	src/smtp.h, tests/Makefile.am, tests/cram-md5.c,
+	tests/digest-md5.c, tests/errors.c, tests/external.c,
+	tests/gssapi.c, tests/md5file.c, tests/name.c, tests/old-base64.c,
+	tests/old-cram-md5.c, tests/old-digest-md5.c, tests/old-gssapi.c,
+	tests/old-md5file.c, tests/simple.c, tests/suggest.c,
+	tests/threadsafety, tests/unicode.c, tests/utils.c, tests/utils.h: 
+	Update copyright years.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* lib/AUTHORS: Update PGP key.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* AUTHORS: Update PGP key.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, doc/gsasl.texi, src/gsasl.c, src/gsasl.ggo: Add gsasl
+	--priority parameter.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* doc/reference/gsasl-docs.tmpl, doc/reference/gsasl.types,
+	doc/reference/gtk-doc.make, gtk-doc.make: Update gtk-doc files.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/arpa_inet.in.h, gl/fseeko.c, gl/m4/alloca.m4,
+	gl/m4/codeset.m4, gl/m4/errno_h.m4, gl/m4/getaddrinfo.m4,
+	gl/m4/getline.m4, gl/m4/getpass.m4, gl/m4/gnulib-common.m4,
+	gl/m4/gnulib-comp.m4, gl/m4/iconv.m4, gl/m4/iconv_open.m4,
+	gl/m4/inet_ntop.m4, gl/m4/inet_pton.m4, gl/m4/inline.m4,
+	gl/m4/intmax_t.m4, gl/m4/inttypes_h.m4, gl/m4/lib-ld.m4,
+	gl/m4/lib-link.m4, gl/m4/localcharset.m4, gl/m4/locale-fr.m4,
+	gl/m4/locale-ja.m4, gl/m4/locale-tr.m4, gl/m4/locale-zh.m4,
+	gl/m4/longlong.m4, gl/m4/malloc.m4, gl/m4/mbrtowc.m4,
+	gl/m4/mbstate_t.m4, gl/m4/multiarch.m4, gl/m4/poll.m4,
+	gl/m4/printf.m4, gl/m4/readline.m4, gl/m4/realloc.m4,
+	gl/m4/sockets.m4, gl/m4/sockpfaf.m4, gl/m4/stdbool.m4,
+	gl/m4/stdint.m4, gl/m4/stdint_h.m4, gl/m4/stdio_h.m4,
+	gl/m4/strdup.m4, gl/m4/unistd_h.m4, gl/m4/vasnprintf.m4,
+	gl/m4/wchar_t.m4, gl/m4/wint_t.m4, gl/poll.c, gl/progname.c,
+	gl/stdint.in.h, gl/stdio.in.h, gl/strerror.c, gl/unistd.in.h,
+	gl/wchar.in.h, gltests/ioctl.c, gltests/test-quotearg.c,
+	gltests/test-unistd.c, lib/gl/Makefile.am, lib/gl/m4/alloca.m4,
+	lib/gl/m4/codeset.m4, lib/gl/m4/errno_h.m4, lib/gl/m4/gc-random.m4,
+	lib/gl/m4/gc.m4, lib/gl/m4/getline.m4, lib/gl/m4/gettext.m4,
+	lib/gl/m4/gnulib-common.m4, lib/gl/m4/gnulib-comp.m4,
+	lib/gl/m4/iconv.m4, lib/gl/m4/intldir.m4, lib/gl/m4/intlmacosx.m4,
+	lib/gl/m4/intmax.m4, lib/gl/m4/intmax_t.m4,
+	lib/gl/m4/inttypes-pri.m4, lib/gl/m4/inttypes_h.m4,
+	lib/gl/m4/lcmessage.m4, lib/gl/m4/lib-ld.m4, lib/gl/m4/lib-link.m4,
+	lib/gl/m4/lock.m4, lib/gl/m4/longlong.m4, lib/gl/m4/malloc.m4,
+	lib/gl/m4/md5.m4, lib/gl/m4/minmax.m4, lib/gl/m4/multiarch.m4,
+	lib/gl/m4/nls.m4, lib/gl/m4/po.m4, lib/gl/m4/printf-posix.m4,
+	lib/gl/m4/progtest.m4, lib/gl/m4/realloc.m4, lib/gl/m4/stdbool.m4,
+	lib/gl/m4/stdint.m4, lib/gl/m4/stdint_h.m4, lib/gl/m4/stdio_h.m4,
+	lib/gl/m4/strverscmp.m4, lib/gl/m4/threadlib.m4,
+	lib/gl/m4/uintmax_t.m4, lib/gl/m4/unistd_h.m4,
+	lib/gl/m4/vasnprintf.m4, lib/gl/m4/wchar_t.m4, lib/gl/m4/wint_t.m4,
+	lib/gl/stdint.in.h, lib/gl/stdio.in.h, lib/gl/unistd.in.h,
+	lib/gl/wchar.in.h, lib/gltests/test-unistd.c: Update gnulib files.
+
+2009-01-23  Simon Josefsson <simon@josefsson.org>
+
+	* doc/Makefile.am: Typo.
+
+2009-01-22  Simon Josefsson <simon@josefsson.org>
+
+	* doc/Makefile.am, doc/gdoc: Update gdoc and use gdoc -pkg-name.
+
+2009-01-22  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2009-01-22  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.c: Add web page links, per new GNU coding standard.
+
+2009-01-07  Simon Josefsson <simon@josefsson.org>
+
+	* lib/digest-md5/test-parser.c: Need to initialize gc.
+
+2009-01-07  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.c: Make --version print both version numbers if libgsasl
+	and gsasl version differ.
+
+2009-01-07  Simon Josefsson <simon@josefsson.org>
+
+	* README, doc/gsasl.texi, doc/reference/gsasl-docs.sgml: Fix GFDL
+	version number.
+
+2009-01-07  Simon Josefsson <simon@josefsson.org>
+
+	* build-aux/gendocs.sh, doc/gendocs_template, gl/Makefile.am,
+	gl/config.charset, gl/localcharset.c, gl/localcharset.h,
+	gl/m4/codeset.m4, gl/m4/errno_h.m4, gl/m4/extensions.m4,
+	gl/m4/getaddrinfo.m4, gl/m4/glibc21.m4, gl/m4/gnulib-cache.m4,
+	gl/m4/gnulib-comp.m4, gl/m4/iconv.m4, gl/m4/inttypes_h.m4,
+	gl/m4/lib-link.m4, gl/m4/localcharset.m4, gl/m4/locale-fr.m4,
+	gl/m4/locale-ja.m4, gl/m4/locale-zh.m4, gl/m4/mbrtowc.m4,
+	gl/m4/mbsinit.m4, gl/m4/mbstate_t.m4, gl/m4/multiarch.m4,
+	gl/m4/printf.m4, gl/m4/quotearg.m4, gl/m4/size_max.m4,
+	gl/m4/stdint.m4, gl/m4/stdint_h.m4, gl/m4/wchar.m4,
+	gl/m4/wchar_t.m4, gl/m4/wctob.m4, gl/m4/wint_t.m4, gl/m4/xsize.m4,
+	gl/mbrtowc.c, gl/mbsinit.c, gl/quotearg.c, gl/ref-add.sin,
+	gl/ref-del.sin, gl/stdint.in.h, gl/stdlib.in.h, gl/streq.h,
+	gl/sys_select.in.h, gl/unistd.in.h, gl/verify.h, gl/version-etc.c,
+	gl/wchar.in.h, gl/wctype.in.h, gltests/Makefile.am,
+	gltests/test-mbrtowc.c, gltests/test-mbrtowc1.sh,
+	gltests/test-mbrtowc2.sh, gltests/test-mbrtowc3.sh,
+	gltests/test-mbrtowc4.sh, gltests/test-mbsinit.c,
+	gltests/test-mbsinit.sh, gltests/verify.h, gltests/wctob.c,
+	lib/gl/Makefile.am, lib/gl/m4/codeset.m4, lib/gl/m4/errno_h.m4,
+	lib/gl/m4/extensions.m4, lib/gl/m4/gettext.m4, lib/gl/m4/glibc2.m4,
+	lib/gl/m4/glibc21.m4, lib/gl/m4/gnulib-cache.m4,
+	lib/gl/m4/gnulib-comp.m4, lib/gl/m4/iconv.m4, lib/gl/m4/intdiv0.m4,
+	lib/gl/m4/intlmacosx.m4, lib/gl/m4/intmax.m4,
+	lib/gl/m4/inttypes-pri.m4, lib/gl/m4/inttypes_h.m4,
+	lib/gl/m4/lcmessage.m4, lib/gl/m4/lib-link.m4,
+	lib/gl/m4/multiarch.m4, lib/gl/m4/nls.m4, lib/gl/m4/po.m4,
+	lib/gl/m4/printf-posix.m4, lib/gl/m4/progtest.m4,
+	lib/gl/m4/size_max.m4, lib/gl/m4/stdint.m4, lib/gl/m4/stdint_h.m4,
+	lib/gl/m4/threadlib.m4, lib/gl/m4/uintmax_t.m4,
+	lib/gl/m4/visibility.m4, lib/gl/m4/wchar.m4, lib/gl/m4/wchar_t.m4,
+	lib/gl/m4/wint_t.m4, lib/gl/m4/xsize.m4, lib/gl/stdint.in.h,
+	lib/gl/stdlib.in.h, lib/gl/unistd.in.h, lib/gl/wchar.in.h,
+	lib/gltests/Makefile.am: Update gnulib files.
+
+2008-12-11  Simon Josefsson <simon@josefsson.org>
+
+	* lib/digest-md5/digesthmac.c: Drop unused macros.
+
+2008-12-11  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/m4/gnulib-cache.m4, gl/m4/gnulib-comp.m4,
+	gl/m4/manywarnings.m4: Update gnulib files.
+
+2008-12-11  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac, gl/m4/include_next.m4, gl/m4/warnings.m4,
+	gl/stdint.in.h, gl/sys_time.in.h, lib/gl/m4/include_next.m4,
+	lib/gl/stdint.in.h, maint.mk: Update gnulib files.
+
+2008-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* lib/tests/Makefile.am: Need libintl.
+
+2008-11-18  Simon Josefsson <simon@josefsson.org>
+
+	* maint.mk: Update gnulib files.
+
+2008-11-18  Simon Josefsson <simon@josefsson.org>
+
+	* lib/Makefile.am: Drop obsolete distcheck rules.
+
+2008-11-18  Simon Josefsson <simon@josefsson.org>
+
+	* lib/Makefile.am: Move gltests directory last.
+
+2008-11-18  Simon Josefsson <simon@josefsson.org>
+
+	* Makefile.am: Re-order build, so that gltests is last.
+
+2008-11-17  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Typos.
+
+2008-11-17  Simon Josefsson <simon@josefsson.org>
+
+	* gl/override/lib/gettext.h.diff,
+	lib/gl/override/lib/gettext.h.diff: Add gnulib overrides.
+
+2008-11-17  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, configure.ac, gl/gettext.h, gl/m4/getaddrinfo.m4,
+	gl/m4/gnulib-comp.m4, gl/m4/hostent.m4, gl/m4/servent.m4,
+	gl/m4/sockets.m4, gl/m4/warnings.m4, lib/gl/Makefile.am,
+	lib/gl/gettext.h, lib/gl/m4/gnulib-cache.m4, m4/valgrind.m4: Update
+	gnulib files.  Change warning handling.
+
+2008-11-17  Simon Josefsson <simon@josefsson.org>
+
+	* lib/plain/server.c: Fix warnings.
+
+2008-11-17  Simon Josefsson <simon@josefsson.org>
+
+	* Makefile.am, gl/m4/getaddrinfo.m4, gl/m4/netdb_h.m4,
+	gl/netdb.in.h, lib/gl/Makefile.am, lib/gl/m4/gnulib-cache.m4,
+	lib/gl/m4/gnulib-comp.m4, lib/gltests/Makefile.am: Update gnulib
+	files.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, configure.ac: Fix warnings.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* tests/simple.c: Silence warning.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac, tests/Makefile.am, tests/cram-md5.c,
+	tests/external.c, tests/md5file.c, tests/old-md5file.c,
+	tests/simple.c, tests/utils.h: Fix warnings.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, configure.ac: Fix warnings.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Need -Wundef afterall.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* lib/src/obsolete.c: Use HAVE_LIBIDN instead of WITH_SASLPREP.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, configure.ac: Re-add -Wundef.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* doc/reference/Makefile.am: Revert.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* lib/src/gsasl-compat.h: Revert but fix warning in another way.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* doc/reference/Makefile.am: Typo.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* doc/reference/Makefile.am: Use --deprecated-guard properly.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* doc/reference/Makefile.am: Add deprecated guard.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, configure.ac, lib/digest-md5/digesthmac.c,
+	lib/digest-md5/digesthmac.h, lib/digest-md5/test-parser.c,
+	lib/src/callback.c, lib/src/internal.h, lib/src/property.c: Enable
+	more warnings.  Fix warnings.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* lib/src/gsasl-compat.h: Avoid warnings.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, configure.ac, lib/configure.ac, lib/m4/output-def.m4: Fix
+	warning handling.  Use output-def.m4.
+
+2008-11-13  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Neatify.
+
+2008-11-12  Simon Josefsson <simon@josefsson.org>
+
+	* lib/libgsasl.pc.in: Add URL field.
+
+2008-11-12  Simon Josefsson <simon@josefsson.org>
+
+	* examples/Makefile.am: Add WARN_CFLAGS.
+
+2008-11-12  Simon Josefsson <simon@josefsson.org>
+
+	* Makefile.am, cfg.mk, configure.ac, gl/Makefile.am, gl/fseeko.c,
+	gl/m4/getaddrinfo.m4, gl/m4/gnulib-cache.m4, gl/m4/gnulib-comp.m4,
+	gl/m4/netdb_h.m4, gl/m4/printf.m4, gl/m4/warnings.m4,
+	gl/netdb.in.h, gltests/sockets.h, lib/configure.ac,
+	lib/m4/update-header-version.m4, src/Makefile.am: Update gnulib
+	files.  Use shared files for common tests.
+
+2008-11-10  Simon Josefsson <simon@josefsson.org>
+
+	* build-aux/pmccabe2html, gl/Makefile.am, gl/m4/sys_ioctl_h.m4: 
+	Update gnulib files.
+
+2008-11-04  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2008-11-04  Simon Josefsson <simon@josefsson.org>
+
+	* doc/Makefile.am, doc/fdl-1.3.texi, doc/fdl.texi, doc/gsasl.texi,
+	gl/Makefile.am, gl/m4/gnulib-cache.m4, gl/m4/gnulib-comp.m4: Use
+	GFDLv1.3+ for manual.
+
+2008-11-04  Simon Josefsson <simon@josefsson.org>
+
+	* gl/m4/include_next.m4, lib/gl/m4/include_next.m4, lib/maint.mk,
+	maint.mk: Update gnulib files.
+
+2008-11-03  Simon Josefsson <simon@josefsson.org>
+
+	* lib/gl/Makefile.am, lib/gl/m4/gnulib-cache.m4,
+	lib/gl/m4/gnulib-comp.m4, lib/gl/m4/stdlib_h.m4,
+	lib/gl/m4/strdup.m4, lib/gl/stdlib.in.h, lib/gl/strdup.c,
+	lib/gl/unistd.in.h, lib/maint.mk: Update gnulib files.
+
+2008-11-03  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/m4/gnulib-cache.m4, gl/m4/gnulib-comp.m4,
+	src/callbacks.c, src/gsasl.c, src/internal.h: Use gnulib xalloc
+	module.
+
+2008-10-30  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gsasl.texi: Cleanup pkg-config description.
+
+2008-10-29  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk, gl/Makefile.am, gl/m4/netdb_h.m4, gl/m4/stdlib_h.m4,
+	gl/m4/sys_socket_h.m4, gl/netdb.in.h, gl/stdlib.in.h,
+	gl/sys_socket.in.h, gl/unistd.in.h, maint.mk: Update gnulib files.
+
+2008-10-29  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2008-10-29  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gdoc: Sync gdoc with libidn.
+
+2008-10-28  Simon Josefsson <simon@josefsson.org>
+
+	* doc/doxygen/Doxyfile.in: Need doxygen.c.
+
+2008-10-28  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, doc/doxygen/Doxyfile.in, doc/doxygen/Doxyfile.orig: 
+	Modernize doxygen configuration.
+
+2008-10-28  Simon Josefsson <simon@josefsson.org>
+
+	* tests/cram-md5.c, tests/digest-md5.c, tests/external.c,
+	tests/gssapi.c, tests/md5file.c: Use gsasl_free when applicable.
+
+2008-10-28  Simon Josefsson <simon@josefsson.org>
+
+	* tests/Makefile.am, tests/suggest.c: Add self-test.
+
+2008-10-28  Simon Josefsson <simon@josefsson.org>
+
+	* lib/src/gsasl.h: Bump version.
+
+2008-10-28  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk: Add code coverage rules.
+
+2008-10-21  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac, lib/NEWS, lib/configure.ac: Bump versions.
+
+2008-10-21  Simon Josefsson <simon@josefsson.org>
+
+	* cfg.mk: Use system's gnupload.
+
+2008-10-21  Simon Josefsson <simon@josefsson.org>
+
+	* ChangeLog: Generated.
+
 2008-10-21  Simon Josefsson <simon@josefsson.org>
 
 	* lib/ChangeLog: Generated.
