--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,11 +2,19 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.1 (unreleased)
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.0 (released 2009-01-23)
 
 ** Fix several compiler warnings.
 
 ** Update gnulib files.
+
+** API and ABI modifications.
+No changes since last version.
 
 * Version 0.2.29 (released 2008-10-21)
 
