--- a/lib/NEWS
+++ b/lib/NEWS
@@ -11,8 +11,11 @@ comparisons to test version level.
 
 ** libgsasl: Use a LD version script on platforms where it is supported.
 Currently only GNU LD and the Solaris linker supports it.  This helps
-Debian package tools to produce better dependencies.  For platforms
-that don't support it, we use Libtool -export-symbols-regex as before.
+Debian package tools to produce better dependencies.  Before we used
+Libtool -export-symbols-regex that created an anonymous version tag.
+We still fall back on -export-symbols-regex if the system does not
+support LD version scripts, although on most platforms this will just
+affect symbol visibility.
 
 ** libgsasl: Compiled with -fvisibility=hidden by default if supported.
 Currently only GCC supports it for ELF targets.  This hides internal
