--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1376,11 +1376,19 @@ in servers to avoid storing clear-text credentials.
 
 @item @code{GSASL_QOPS}
 
-For the DIGEST-MD5 mechanism, this property is queried for to get the
-set of quality of protection values to advertise in server mode.  The
-property holds strings with comma separated keywords denoting the set
-of qops to use, for example @code{qop-auth, qop-int}.  Valid keywords
-are @code{qop-auth}, @code{qop-int}, and @code{qop-conf}.
+The DIGEST-MD5 server query for this property to get the set of
+quality of protection (QOP) values to advertise.  The property holds
+strings with comma separated keywords denoting the set of qops to use,
+for example @code{qop-auth, qop-int}.  Valid keywords are
+@code{qop-auth}, @code{qop-int}, and @code{qop-conf}.
+
+@item @code{GSASL_QOP}
+
+The DIGEST-MD5 client query for this property to get the quality of
+protection (QOP) values to request.  The property value is one of the
+keywords for @code{GSASL_QOPS}.  The client must chose one of the QOP
+values offered by the server (which may be inspected through the
+@code{GSASL_QOPS} property).
 
 @end itemize
 
@@ -1622,17 +1630,18 @@ may use the @code{GSASL_AUTHID}, @code{GSASL_AUTHZID} and
 should be used.  The server will then compare the client response with
 a computed correct response, and accept the user accordingly.
 
-The server also uses the @code{GSASL_QOPS} callback to get the set of
+The server uses the @code{GSASL_QOPS} callback to get the set of
 quality of protection values to use.  By default, it advertise support
 for both authentication (@code{qop-auth}) and authentication plus
 integrity (@code{qop-int}).  You can use the callback to, for example,
 make the server advertise support for only authentication.
 
-Currently only the authentication quality of service is implemented in
-client mode.  In other words, payload integrity or privacy protection
-are not supported.  Consequently, there are no properties for the
-maximum buffer size and cipher fields.  The server supports the
-integrity mode.
+The client uses the @code{GSASL_QOP} callback to get the quality of
+protection value to request.  The client must chose be one of the QOP
+values offered by the server (which may be inspected through the
+@code{GSASL_QOPS} property).  If the client does not return a value,
+by default, @code{qop-int} is used when the server supports it and
+otherwise @code{qop-auth} is used.
 
 @node NTLM
 @section The NTLM mechanism
