--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,19 +4,38 @@ See the end for copying conditions.
 
 * Version 1.1 (unreleased)
 
-** libgsasl: Add new property GSASL_QOPS.
-For the DIGEST-MD5 mechanism, this property is queried for to get the
-set of quality of protection values to advertise in server mode.  The
-property holds strings with comma separated keywords denoting the set
-of qops to use, for example "qop-auth, qop-int".  Valid keywords are
-"qop-auth", "qop-int", and "qop-conf".
+** DIGEST-MD5 client: Add support for client integrity layer.
+The layer is used by default if the server supports it.
 
-** DIGEST-MD5 server: Now queries application for QOP value.
-This makes it possible for applications to advertise support for
+** libgsasl: Add new property GSASL_QOPS.
+The DIGEST-MD5 server query for this property to get the set of
+quality of protection (QOP) values to advertise.  The property holds
+strings with comma separated keywords denoting the set of qops to use,
+for example "qop-auth, qop-int".  Valid keywords are "qop-auth",
+"qop-int", and "qop-conf".  The GSSAPI mechanism may be enhanced to
+use this property as well in the future.
+
+** libgsasl: Add new property GSASL_QOP.
+The DIGEST-MD5 client query for this property to get the quality of
+protection (QOP) values to request.  The property value is one of the
+keywords for GSASL_QOPS.  The client must chose one of the QOP values
+offered by the server (which may be inspected through the GSASL_QOPS
+property).  The GSSAPI mechanism may be enhanced to use this property
+as well in the future.
+
+** DIGEST-MD5 client: Now queries application for QOP value
+This makes it possible for client application to request support for
 authentication only and/or authentication plus integrity.  Before, the
-server always advertised support for both.  Note that confidentiality
-is not supported, and if you request it you will get an error.
-Suggested by Andery Melnikov <temnota.am@gmail.com>.
+client only supported authentication.  Note that confidentiality is
+not supported, and if you request it you will get an error.
+
+** DIGEST-MD5 server: Now queries application for QOP values.
+This makes it possible for server applications to influence whether to
+advertise support for authentication only and/or authentication plus
+integrity.  Before, the server unconditionally advertised support for
+both.  Note that confidentiality is not supported, and if you request
+it you will get an error.  Suggested by Andery Melnikov
+<temnota.am@gmail.com>.
 
 ** libgsasl: Added C pre-processor expressions for version handling.
 The new symbols GSASL_VERSION_MAJOR, GSASL_VERSION_MINOR,
