--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.1 (unreleased)
+* Version 1.1 (released 2009-03-25)
 
 ** gsasl: Reading integrity protected data from server now works.
 Before it didn't decode data.
